--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0rc1/angular.min.js"></script>
 <script src="https://www.dropbox.com/static/api/1/dropbox-datastores-0.1.0-b3.js"></script>
-<script src="/app.js"></script>
+<script src="app.js"></script>
 
 <div class="container" ng-app>
 	<div ng-controller="ItemsController">
