--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 								<input ng-model="_item(item,'title').model" type="text" class="form-control" id="input-title">
 							</div>
 							<div class="col-lg-1">
-								<button class="btn btn-danger" ng-click="delete($index)"><span class="glyphicon glyphicon-trash"></span></button>
+								<button class="btn btn-danger" ng-click="deleteRecord($index)"><span class="glyphicon glyphicon-trash"></span></button>
 							</div>
 						</div>
 					</form>
