--- a/index.html
+++ b/index.html
@@ -24,7 +24,13 @@
 					<li ng-repeat="item in items" class="item" id="item-{{$index}}">
 						<article itemscope>
 							<div class="row">
-								<div itemprop="title" class="col-lg-10">{{_item(item, 'title').model}}</div>
+								<div class="col-lg-10">
+									<div itemprop="title" class="article-title">{{_item(item, 'title').model}}</div>
+								</div>
+
+								<div class="col-lg-10" ng-show="_item(item, 'description').model">
+									<blockquote itemprop="description" class="article-description">{{_item(item, 'description').model}}</blockquote>
+								</div>
 
 								<div class="col-lg-1">
 									<a class="btn btn-primary" data-toggle="modal" href="#edit" ng-click="editing($index)"><span class="glyphicon glyphicon-edit"></span></a>
@@ -54,9 +60,16 @@
 						<div class="modal-body">
 							<form class="form-horizontal" role="form" id="form-edit">
 								<div class="form-group">
-									<label class="col-lg-1 control-label" for="input-title">Title</label>
-									<div class="col-lg-9">
+									<label class="col-lg-2 control-label" for="input-title">Title</label>
+									<div class="col-lg-10">
 										<input ng-model="add.title" type="text" class="form-control" id="input-title">
+									</div>
+								</div>
+
+								<div class="form-group">
+									<label class="col-lg-2 control-label" for="input-description">Description</label>
+									<div class="col-lg-10">
+										<textarea ng-model="add.description" type="text" class="form-control" id="input-description"></textarea>
 									</div>
 								</div>
 							</form>
@@ -81,9 +94,16 @@
 						<div class="modal-body">
 							<form class="form-horizontal" role="form" id="form-edit">
 								<div class="form-group">
-									<label class="col-lg-1 control-label" for="input-title">Title</label>
-									<div class="col-lg-9">
+									<label class="col-lg-2 control-label" for="input-title">Title</label>
+									<div class="col-lg-10">
 										<input ng-model="edit.title" type="text" class="form-control" id="input-title">
+									</div>
+								</div>
+
+								<div class="form-group">
+									<label class="col-lg-2 control-label" for="input-description">Description</label>
+									<div class="col-lg-10">
+										<textarea ng-model="edit.description" type="text" class="form-control" id="input-description"></textarea>
 									</div>
 								</div>
 							</form>
